force-app/main/default/objects/Order/fields/AccountAddress__c.field-meta.xml
<CustomField>
    <fullName>AccountAddress__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Where is the Addres  of the account</description>
    <inlineHelpText>Choose the account addres</inlineHelpText>
    <label>Account Address</label>
    <referenceTo>AccountAddress__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>