force-app/main/default/objects/Order/fields/DeletedOnExternal__c.field-meta.xml
<CustomField>
    <fullName>DeletedOnExternal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted On External</label>
    <type>Checkbox</type>
</CustomField>