force-app/main/default/objects/Order/fields/Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>Destination_Street__c</fullName>
    <description>Wich street it is destined</description>
    <inlineHelpText>Write the strret name</inlineHelpText>
    <label>Destination Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>