force-app/main/default/objects/Order/fields/DestinationCity__c.field-meta.xml
<CustomField>
    <fullName>DestinationCity__c</fullName>
    <description>The name of the city</description>
    <inlineHelpText>Write the city name</inlineHelpText>
    <label>Destination City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>