force-app/main/default/objects/Order/fields/DestinationComplement__c.field-meta.xml
<CustomField>
    <fullName>DestinationComplement__c</fullName>
    <description>The Order location complement</description>
    <inlineHelpText>Write the Complement name</inlineHelpText>
    <label>Destination Complement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>