force-app/main/default/objects/Order/fields/DestinationDistrict__c.field-meta.xml
<CustomField>
    <fullName>DestinationDistrict__c</fullName>
    <description>The district of the destination</description>
    <inlineHelpText>Write the district</inlineHelpText>
    <label>Destination District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>