force-app/main/default/objects/Order/fields/DestinationNumber__c.field-meta.xml
<CustomField>
    <fullName>DestinationNumber__c</fullName>
    <description>The destination number</description>
    <inlineHelpText>Write the number</inlineHelpText>
    <label>Destination Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>