force-app/main/default/objects/Order/fields/DestinationState__c.field-meta.xml
<CustomField>
    <fullName>DestinationState__c</fullName>
    <description>Wich state is the order</description>
    <inlineHelpText>Choose on the picklist the state of the order</inlineHelpText>
    <label>DestinationState</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>