force-app/main/default/objects/Order/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <description>Observations of the orders</description>
    <inlineHelpText>Write something</inlineHelpText>
    <label>Observation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>