force-app/main/default/objects/Order/fields/PaymentCondition__c.field-meta.xml
<CustomField>
    <fullName>PaymentCondition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Wich Payment Condition is iy</description>
    <inlineHelpText>Choose a Payment Condition</inlineHelpText>
    <label>Payment Condition</label>
    <referenceTo>Payment_Condition__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>