force-app/main/default/objects/Order/fields/RepresentativeOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>RepresentativeOrderNumber__c</fullName>
    <description>Wich is the Representative Order Number</description>
    <inlineHelpText>Write a number</inlineHelpText>
    <label>Representative Order Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>