force-app/main/default/objects/Order/fields/State_Origin__c.field-meta.xml
<CustomField>
    <fullName>State_Origin__c</fullName>
    <description>The State origin</description>
    <inlineHelpText>Choose a state on picklist</inlineHelpText>
    <label>State Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_State</valueSetName>
    </valueSet>
</CustomField>