force-app/main/default/objects/Order/fields/TotalDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalDiscount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sum of all discount of order items</description>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>