force-app/main/default/objects/Order/listViews/WaitingApprovalOrder.listView-meta.xml
<ListView>
    <fullName>WaitingApprovalOrder</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Waiting Approval</value>
    </filters>
    <label>Waiting Approval Order</label>
</ListView>